(#2275) - Fix ribbon overflow

--- a/docs/static/less/pouchdb/scaffolding.less
+++ b/docs/static/less/pouchdb/scaffolding.less
@@ -1,10 +1,5 @@
 @import "@{bootstrap}/scaffolding.less";
 
-body {
-  overflow-x: hidden;
-  position: relative;
-}
-
 // Temporary fix for Jekyll's P tags all over the place. :/
 p:empty { display: none; }
 
